# vpoller-fnt-zabbix-sync

./: .env_vfz_sync  .env_vfzsync  .gitignore  Dockerfile  VFZ Sync Schema.gsheet  VFZ Sync doc.gdoc  docker-compose.yaml  docker-compose.yml  entrypoint.sh  entrypoint_flask.sh  poetry-python.sh  pyproject.toml  requirements.txt  vzbx-sync.py  vzbx-sync.yaml
config/: vfzsync.DEFAULT.yaml
debugtoolkit/: debugtoolkit.py
doc/: VFZ Sync Schema.gsheet  VFZ Sync doc.gdoc  vfzsync.drawio  Модель данных ТГК интеграция с VM_1.5.docx  Состояния виртуальных серверов и сценарии при их смене_20200520.docx  Состояния виртуальных серверов и сценарии при их смене_20200901.docx  Состояния виртуальных серверов и сценарии при их смене_20200922.docx  Состояния виртуальных серверов и сценарии при их смене_20201204.docx  ТЗ СДИ БАЗИС v3.docx  ТЗ СДИ БАЗИС v4.docx
grafana/: Детализированный отчет-1586458702480.json  Детализированный отчет-1589366305849.json  Детализированный отчет-1591045215849.json  Информация о сервере-1589366319655.json  Основной экран-1589366273284.json  Основной экран-1597404897818.json  Основной экран-1598953640268.json
lib/: debug_toolkit.py
vfz_sync/: debugtoolkit.py  fntapi.py  vfz_sync.py  vpollerapi.py  zapi.py
vfz_sync/config/: vfz_sync.DEFAULT.yaml
vfz_sync/lib/: debug_toolkit.py  debugtoolkit.py  fntapi.py  vpollerapi.py  zapi.py
vfz_sync/static/: site.css
vfz_sync/templates/: layout.html  sync.html
vfzsync/: __init__.py  __main__.py  vfz_flask.py  vfz_routes.py  vfz_webapp.py
vfzsync/config/: vfzsync.DEFAULT.yaml
vfzsync/lib/: debugtoolkit.py  extrafuncs.py  fntapi.py  prob_report.py  vfzlib.py  vpollerapi.py  zabbixapi.py
vfzsync/templates/: layout.html  problem_report.html  sync.html
zabbix/: VFZ Sync Hosts.xml  VFZ Sync Templates.xml  zabbix_webhook.js
