[tool.poetry]
name = "vfz_sync"
version = "0.1.0"
description = ""
authors = ["Daniil Ovsyannikov <to.djet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-zabbix = "^1.1"
vpoller = "^0.7.3"
PyYAML = "^5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
jupyterlab = "^1.2"
jupyter = "^1.0"
jupyter-server = "^0.1.1"
pandas = "^0.25.3"
rope = "^0.14.0"
autopep8 = "^1.4"
yapf = "^0.28.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=1.0.0b8"]
build-backend = "poetry.masonry.api"
